changed package name to floodmapr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: watermapr
+Package: floodmapr
 Type: package
 Date: 2020-08-12
 Title: Download and Classify Watermaps for the Okavango Delta
