--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,11 @@ RoxygenNote: 7.1.0
 Depends:
     R (>= 2.10),
     raster (>= 3.3.13)
+Imports:
+    dplyr,
+    magrittr,
+    tidyr,
+    lubridate,
+    rgeos,
+    gdalUtils,
+    terra
