--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,14 @@ import(raster)
 import(sp)
 import(terra)
 import(velox)
+importFrom(RGISTools,modSearch)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate_all)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdalbuildvrt)
 importFrom(gdalUtils,get_subdatasets)
 importFrom(lubridate,years)
+importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(rgeos,gBuffer)
 importFrom(tidyr,nest)
