--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,7 @@ import(terra)
 importFrom(RGISTools,modSearch)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate_all)
-importFrom(gdalUtils,gdal_translate)
-importFrom(gdalUtils,gdalbuildvrt)
+importFrom(gdalUtils,get_subdatasets)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
